# multi-agent-portfolio-advisor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: evaluation.yml
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  RUNBOOK.md  api.md
docs/plans/: 2026-01-10-agent-memory-design.md
src/: __init__.py  config.py
src/agents/: __init__.py  analysis.py  base.py  recommendation.py  research.py
src/api/: __init__.py  approvals.py  evaluation.py  health.py  routes.py  streaming.py  webhooks.py
src/approval/: __init__.py  manager.py  models.py
src/cache/: __init__.py  manager.py
src/caching/: __init__.py  metrics.py  observability.py  prompt_cache.py
src/data/: __init__.py  models.py  polygon.py  router.py
src/evaluation/: __init__.py  cli.py  dashboard.py  judges.py  models.py  runner.py  statistics.py  storage.py
src/memory/: __init__.py  embeddings.py  manager.py  models.py  store.py
src/observability/: __init__.py  costs.py  dashboards.py  failures.py  metrics.py  performance.py  replay.py  tracing.py
src/orchestration/: __init__.py  errors.py  state.py  workflow.py
src/resilience/: __init__.py  circuit_breaker.py  degradation.py  rate_limiter.py
src/streaming/: __init__.py  emitter.py  events.py
src/tools/: __init__.py  base.py  market_data.py  news_search.py  risk_metrics.py  trade_generator.py
src/webhooks/: __init__.py  dispatcher.py  events.py  manager.py  security.py
tests/: __init__.py  test_placeholder.py
tests/test_agents/: test_analysis.py  test_base.py  test_recommendation.py  test_research.py
tests/test_api/: test_health.py  test_routes.py
tests/test_approval/: __init__.py  test_api.py  test_manager.py  test_models.py
tests/test_cache/: test_manager.py
tests/test_caching/: __init__.py  test_metrics.py  test_observability.py  test_prompt_cache.py
tests/test_data/: __init__.py  test_polygon.py  test_router.py
tests/test_evaluation/: test_dashboard.py  test_judges.py  test_models.py  test_runner.py  test_statistics.py  test_storage.py
tests/test_memory/: test_embeddings.py  test_manager.py  test_models.py  test_store.py
tests/test_observability/: test_costs.py  test_dashboards.py  test_failures.py  test_metrics.py  (+3 more)
(+21 files in other folders)
