[project]
name = "portfolio-advisor"
version = "0.1.0"
description = "Multi-agent system for portfolio analysis with full observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM & Agent Framework
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "anthropic>=0.40.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Utilities
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    # Market Data
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    # Linting & Formatting
    "ruff>=0.8.0",
    # Type Checking
    "mypy>=1.13.0",
    # Type Stubs
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["portfolio_advisor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langfuse.*",
    "yfinance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
